--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <div class="jumbotron text-center">
   <h1>Hazelhatch Park</h1>
-  <p>Welcome to Hazelhatch Park Residents assoication</p>
+  <p>Welcome to Hazelhatch Park Residents Assoication</p>
 </div>
   
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
       <h3>Management Company</h3>
-      <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management </p>
+      <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
 	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new">click here</a></p>
     </div>
     <div class="col-sm-4">
