--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
     <div class="col-sm-4">
       <h3>Management Company</h3>
       <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
-	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new">click here</a></p>
+	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
     </div>
     <div class="col-sm-4">
       <h3>Residents Association</h3>
