--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@ body {
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
+	    <span class="border">
       <h3>Management Company</h3>
       <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
 	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
-    </div>
+	   </span>
+		    </div>
     <div class="col-sm-5">
       <h3>Residents Association</h3>
       <p>Coming Soon!</p>
