--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
-	    <span class="border">
+	    <span class="border border-secondary">
       <h3>Management Company</h3>
       <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
 	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
