--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@ body {
   
 <div class="container">
   <div class="row">
-	  <span class="border border-secondary">
-    <div class="col-sm-2">
-	  
+   <div class="col-sm-2">
+	    	<div class="panel panel-default">
+   		 	<div class="panel-heading">Panel Heading</div>
+    			<div class="panel-body">Panel Content</div>
+ 		
+	   
       <h3>Management Company</h3>
       <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
 	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
+   </div>
 	   </div>
- </span>
+
     <div class="col-sm-5">
       <h3>Residents Association</h3>
       <p>Coming Soon!</p>
