--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ body {
 .jumbotron {
     background: none
 }
+	 .panel-transparent .panel-heading{
+        background: rgba(122, 130, 136, 0.2)!important;
+    }
 </style>
 </head>
 <body>
@@ -27,10 +30,8 @@ body {
 <div class="container">
   <div class="row">
    <div class="col-sm-2">
-	    	<div class="panel panel-default">
-   		 	<div class="panel-heading">Panel Heading</div>
-    			<div class="panel-body">Panel Content</div>
- 		
+	 <div class="panel panel-default panel-transparent">
+   		<div class="panel-body"> 		
 	   
       <h3>Management Company</h3>
       <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
