--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@ body {
 	 <div class="panel panel-default panel-transparent">
    		<div class="panel-body"> 		
 	   
-      <h3>Management Company</h3>
-      <p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
-	   <p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
+			<h3>Management Company</h3>
+			<p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
+			<p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
+		</div>
+	</div>
    </div>
 
 
