--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ body {
   <div class="row">
    <div class="col-sm-2">
 	 <div class="panel panel-default panel-transparent">
-   		<div class="panel-body"> 		
-	   
+   		<div class="panel-body"> 	
 			<h3>Management Company</h3>
 			<p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
 			<p>To contact Hazelhatch Park Management Company <a href="http://support.sfpm.ie/support/tickets/new" target="_blank">click here</a></p>
@@ -42,15 +41,23 @@ body {
 
 
     <div class="col-sm-5">
+	    <div class="panel panel-default panel-transparent">
+   		<div class="panel-body">
       <h3>Residents Association</h3>
       <p>Coming Soon!</p>
       <p>To get involved please email info@hazelhatchpark.ie</p>
     </div>
+	    </div>
+	  </div>
     <div class="col-sm-5">
+	    <div class="panel panel-default panel-transparent">
+   		<div class="panel-body">
       <h3>News and Events</h3>        
       <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
       <p><a href="http://www.hazelhatchpark.ie/funday2018/index.html">2018 Family Fun Day</a></p>
     </div>
+	    </div>
+	  </div>
   </div>
 </div>
 
