--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 .jumbotron {
     background: none
 }
-	 .panel-transparent .panel-heading{
+	 .panel-transparent{
         background: rgba(122, 130, 136, 0.2)!important;
     }
 </style>
@@ -41,7 +41,7 @@ body {
 
 
     <div class="col-sm-5">
-	    <div class="panel panel-default panel-transparent">
+	    <div class="panel panel-success">
    		<div class="panel-body">
       <h3>Residents Association</h3>
       <p>Coming Soon!</p>
