--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 <style> 
 body {
-    background-image: url("theDrive.jpg");
+    background-image: url("theLads.jpg");
 }
 .jumbotron {
     background: none
@@ -41,7 +41,7 @@ body {
 
 
     <div class="col-sm-5">
-	    <div class="panel panel-success">
+	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
       <p>Coming Soon!</p>
