--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 <style> 
 body {
-    background-image: url("theLads.jpg");
+    background-image: url("theDrive.jpg");
 }
 .jumbotron {
     background: none
@@ -18,6 +18,7 @@ body {
 	 .panel-transparent{
         background: rgba(122, 130, 136, 0.2)!important;
     }
+	
 </style>
 </head>
 <body>
@@ -44,8 +45,8 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p>Coming Soon!</p>
-      <p>To get involved please email info@hazelhatchpark.ie</p>
+      <p class="text-secondary">Coming Soon!</p>
+      <p class="text-secondary">To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
 	  </div>
@@ -53,7 +54,7 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>News and Events</h3>        
-      <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
+      <p class="text-secondary">Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
       <p><a href="http://www.hazelhatchpark.ie/funday2018/index.html">2018 Family Fun Day</a></p>
     </div>
 	    </div>
