--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p class="text-secondary">Coming Soon!</p>
-      <p class="text-secondary">To get involved please email info@hazelhatchpark.ie</p>
+      <p class="text-danger">Coming Soon!</p>
+      <p class="text-danger">To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
 	  </div>
