--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
     background: none
 }
 	 .panel-transparent{
-        background: rgba(122, 130, 136, 0.8)!important;
+        background: rgba(122, 130, 136, 0.3)!important;
     }
 	
 </style>
@@ -45,8 +45,8 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p class="text-danger">Coming Soon!</p>
-      <p class="text-danger">To get involved please email info@hazelhatchpark.ie</p>
+      <p class="text-white">Coming Soon!</p>
+      <p class="text-white">To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
 	  </div>
@@ -54,7 +54,7 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>News and Events</h3>        
-      <p class="text-secondary">Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
+      <p class="text-white">Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
       <p><a href="http://www.hazelhatchpark.ie/funday2018/index.html">2018 Family Fun Day</a></p>
     </div>
 	    </div>
