--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ body {
 	 .panel-transparent{
         background: rgba(122, 130, 136, 0.3)!important;
     }
+
+p {
+    color: green;
+}
+
 	
 </style>
 </head>
@@ -45,8 +50,8 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p class="text-white">Coming Soon!</p>
-      <p class="text-white">To get involved please email info@hazelhatchpark.ie</p>
+      <p>Coming Soon!</p>
+      <p>To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
 	  </div>
@@ -54,7 +59,7 @@ body {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>News and Events</h3>        
-      <p class="text-white">Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
+      <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
       <p><a href="http://www.hazelhatchpark.ie/funday2018/index.html">2018 Family Fun Day</a></p>
     </div>
 	    </div>
