--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body {
 
 p {
     color: black;
-    bg-color: blue;
 }
+	
 
 	
 </style>
@@ -51,7 +51,7 @@ p {
 	    <div class="panel panel-default panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p>Coming Soon!</p>
+      <p class="bg-info">Coming Soon!</p>
       <p>To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
