--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@ body {
     background: none
 }
 	 .panel-transparent{
-        background: rgba(122, 130, 136, 0.3)!important;
+        background: rgba(122, 130, 136, 0.4)!important;
     }
 
 p {
     color: black;
+    class="bg-info"
 }
 	
 
