--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@ body {
     background: none
 }
 	 .panel-transparent{
-        background: rgba(122, 130, 136, 0.4)!important;
+        background: rgba(122, 130, 136, 0.6)!important;
     }
 
 p {
     color: black;
-    class="bg-info"
+    
 }
-	
-
 	
 </style>
 </head>
@@ -38,7 +36,7 @@ p {
 <div class="container">
   <div class="row">
    <div class="col-sm-4">
-	 <div class="panel panel-default panel-transparent">
+	 <div class="panel panel-info panel-transparent">
    		<div class="panel-body"> 	
 			<h3>Management Company</h3>
 			<p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
@@ -58,7 +56,7 @@ p {
 	    </div>
 	  </div>
     <div class="col-sm-4">
-	    <div class="panel panel-default panel-transparent">
+	    <div class="panel panel-info panel-transparent">
    		<div class="panel-body">
       <h3>News and Events</h3>        
       <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
