--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ p {
 
 
     <div class="col-sm-4">
-	    <div class="panel panel-default panel-transparent">
+	    <div class="panel panel-info">
    		<div class="panel-body">
       <h3>Residents Association</h3>
       <p class="bg-info">Coming Soon!</p>
@@ -57,7 +57,7 @@ p {
 	  </div>
     <div class="col-sm-4">
 	    <div class="panel panel-info panel-transparent">
-   		<div class="panel-body">
+   		<div class="panel-info">
       <h3>News and Events</h3>        
       <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
       <p><a href="http://www.hazelhatchpark.ie/funday2018/index.html">2018 Family Fun Day</a></p>
