--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ p {
 <div class="container">
   <div class="row">
    <div class="col-sm-4">
-	 <div class="panel panel-info panel-transparent">
+	 <div class="panel panel-transparent">
    		<div class="panel-body"> 	
 			<h3>Management Company</h3>
 			<p>Hazelhatch Park is currently managed by Sherry FitzGerald Management PLC</p>
@@ -47,16 +47,16 @@ p {
 
 
     <div class="col-sm-4">
-	    <div class="panel panel-info">
+	    <div class="panel panel-transparent">
    		<div class="panel-body">
       <h3>Residents Association</h3>
-      <p class="bg-info">Coming Soon!</p>
+      <p>Coming Soon!</p>
       <p>To get involved please email info@hazelhatchpark.ie</p>
     </div>
 	    </div>
 	  </div>
     <div class="col-sm-4">
-	    <div class="panel panel-info panel-transparent">
+	    <div class="panel panel-transparent">
    		<div class="panel-info">
       <h3>News and Events</h3>        
       <p>Our annual fun day was a major success, thanks to all involved. Lets go for bigger and better next year.</p>
