--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Hazelhatch Park</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="name" content="Hazelhatch Park Community Website">
+  <meta name="keywords" content="Hazelhatch,Hazelhatch Park,Hazelhatch Park Residents Association, Hazel Hatch Park">
+  <meta name="description" content="Hazelhatch Park Residents Association">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
