--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="name" content="Hazelhatch Park Community Website">
+  <meta name="Author" content="Stephen Fitzpatrick">
   <meta name="keywords" content="Hazelhatch,Hazelhatch Park,Hazelhatch Park Residents Association, Hazel Hatch Park">
   <meta name="description" content="Hazelhatch Park Residents Association">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
