--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ p {
   <p>Welcome to Hazelhatch Park Residents Assoication</p>
 </div>
   
-<div class="container">
+<div class="container.fluid">
   <div class="row">
    <div class="col-sm-4">
 	 <div class="panel panel-transparent">
