--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 <style> 
 body {
-    background-image: url("Bridge.jpg");
+    background-image: url("theDrive.jpg");
 	opacity : 0.2;
 }
 .jumbotron {
