--- a/map.html
+++ b/map.html
@@ -1,9 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Hazelhatch Park</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="name" content="Hazelhatch Park Community Website">
+  <meta name="Author" content="Stephen Fitzpatrick">
+  <meta name="keywords" content="Hazelhatch,Hazelhatch Park,Hazelhatch Park Residents Association, Hazel Hatch Park">
+  <meta name="description" content="Hazelhatch Park Residents Association">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+<style> 
+body {
+    background-image: url("theDrive.jpg");
+	opacity : 0.2;
+}
+.jumbotron {
+    background: none
+}
+	 .panel-transparent{
+        background: rgba(122, 130, 136, 0.3)!important;
+    }
+
+p {
+    color: black;
+    
+}
+	
+</style>
+</head>
 <body>
-<iframe width="100%" height="1200px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false">
-</iframe>
-<p>
-<a href="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395">See full screen</a>
-</p>
+
+<div class="jumbotron text-center">
+  <h1>Hazelhatch Park</h1>
+  <p>Welcome to Hazelhatch Park Residents Assoication</p>
+</div>
+  
+<div class="container.fluid">
+ 
+	
+	<div class="col-sm-4">
+	    <div class="panel panel-transparent">
+   		<div class="panel-info">
+      <h3>MAP</h3>        
+      <p>A detailed map of the estate</p>
+	<iframe width="100%" height="1200px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false"></iframe>
+      <p><a href="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395">See full screen</a></p>
+    </div>
+	    </div>
+	  </div>
+
 </body>
 </html>
+
+
