--- a/map.html
+++ b/map.html
@@ -41,8 +41,8 @@ p {
 <div class="container.fluid">
  
 	
-	<div class="col-sm-4">
-	    <div class="panel panel-transparent">
+	<div class="jumbotron">
+	    <div class="panel">
    		<div class="panel-info">
       <h3>MAP</h3>        
       <p>A detailed map of the estate</p>
