--- a/map.html
+++ b/map.html
@@ -45,7 +45,7 @@ p {
 	    <div class="panel">
    		<div class="panel-info">
       <h3>MAP</h3>        
-      <p>A detailed map of the estate</p>
+      <p>AB detailed map of the estate</p>
 	<iframe width="100%" height="1200px" frameborder="0" allowfullscreen src="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false"></iframe>
       <p><a href="//umap.openstreetmap.fr/en/map/hazelhatch-park_521395">See full screen</a></p>
     </div>
